--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
+env:
+	- DOCKER_COMPOSE_VERSION=1.4.2
+
 language: node_js
 node_js:
   - "10"
 services:
   - docker
+before_install:
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
 script:
-  - docker build -t backend backend/
-  - docker run -p 8000:8000 backend
+  - docker-compose up -d
   - npm install --prefix frontend/
   - npm test --prefix frontend/
