--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,4 @@ before_install:
   - sudo mv docker-compose /usr/local/bin
 script:
   - docker-compose up -d
+  - docker-compose exec frontend sh -c "npm test --prefix frontend/"
