--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,8 +3,7 @@ FROM node:8
 # Prepare app directory
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app/
-ADD . /usr/src/app/
+COPY . /usr/src/app/
 
 # Start service
-EXPOSE 3000
 CMD [ "npm", "start" ]
